Bugfixing and simplified email templates

--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -51,7 +51,7 @@
                     {% else %}
                         {% if student.syndicate == None and student.year == 1 %}
                             <p>You haven't created, or been invited to, a syndicate yet.</p>
-                            <!--<a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>-->
+                            <a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>
                         {% elif student.syndicate != None and student.year == 1 %}
                             <p>You've been invited to a syndicate. Accept the invite now!</p>
                             <a href="dashboard/syndicate" class="btn btn-primary">Accept Invite</a>
