--- a/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
+++ b/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
@@ -1,298 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge" /><!--<![endif]-->
-    <meta name="viewport" content="width=device-width" />
-    <title> </title>
-    <style type="text/css">
-.wrapper a:hover {
-  text-decoration: none !important;
-}
-.btn a:hover,
-.footer__links a:hover {
-  opacity: 0.8;
-}
-.wrapper .footer__share-button:hover {
-  color: #ffffff !important;
-  opacity: 0.8;
-}
-a[x-apple-data-detectors] {
-  color: inherit !important;
-  text-decoration: none !important;
-  font-size: inherit !important;
-  font-family: inherit !important;
-  font-weight: inherit !important;
-  line-height: inherit !important;
-}
-.column {
-  padding: 0;
-  text-align: left;
-  vertical-align: top;
-}
-.mso .font-avenir,
-.mso .font-cabin,
-.mso .font-open-sans,
-.mso .font-ubuntu {
-  font-family: sans-serif !important;
-}
-.mso .font-bitter,
-.mso .font-merriweather,
-.mso .font-pt-serif {
-  font-family: Georgia, serif !important;
-}
-.mso .font-lato,
-.mso .font-roboto {
-  font-family: Tahoma, sans-serif !important;
-}
-.mso .font-pt-sans {
-  font-family: "Trebuchet MS", sans-serif !important;
-}
-.mso .footer p {
-  margin: 0;
-}
-@media only screen and (max-width: 620px) {
-  .wrapper .size-18,
-  .wrapper .size-20 {
-    font-size: 17px !important;
-    line-height: 26px !important;
-  }
-  .wrapper .size-22 {
-    font-size: 18px !important;
-    line-height: 26px !important;
-  }
-  .wrapper .size-24 {
-    font-size: 20px !important;
-    line-height: 28px !important;
-  }
-  .wrapper .size-26 {
-    font-size: 22px !important;
-    line-height: 31px !important;
-  }
-  .wrapper .size-28 {
-    font-size: 24px !important;
-    line-height: 32px !important;
-  }
-  .wrapper .size-30 {
-    font-size: 26px !important;
-    line-height: 34px !important;
-  }
-  .wrapper .size-32 {
-    font-size: 28px !important;
-    line-height: 36px !important;
-  }
-  .wrapper .size-34,
-  .wrapper .size-36 {
-    font-size: 30px !important;
-    line-height: 38px !important;
-  }
-  .wrapper .size-40 {
-    font-size: 32px !important;
-    line-height: 40px !important;
-  }
-  .wrapper .size-44 {
-    font-size: 34px !important;
-    line-height: 43px !important;
-  }
-  .wrapper .size-48 {
-    font-size: 36px !important;
-    line-height: 43px !important;
-  }
-  .wrapper .size-56 {
-    font-size: 40px !important;
-    line-height: 47px !important;
-  }
-  .wrapper .size-64 {
-    font-size: 44px !important;
-    line-height: 50px !important;
-  }
-  .divider {
-    Margin-left: auto !important;
-    Margin-right: auto !important;
-  }
-  .btn a {
-    display: block !important;
-    font-size: 14px !important;
-    line-height: 24px !important;
-    padding: 12px 10px !important;
-    width: auto !important;
-  }
-  .btn--shadow a {
-    padding: 12px 10px 13px 10px !important;
-  }
-  .image img {
-    height: auto;
-    width: 100%;
-  }
-  .layout,
-  .column,
-  .preheader__webversion,
-  .header td,
-  .footer,
-  .footer__left,
-  .footer__right,
-  .footer__inner {
-    width: 320px !important;
-  }
-  .preheader__snippet,
-  .layout__edges {
-    display: none !important;
-  }
-  .preheader__webversion {
-    text-align: center !important;
-  }
-  .header__logo {
-    Margin-left: 20px;
-    Margin-right: 20px;
-  }
-  .layout--full-width {
-    width: 100% !important;
-  }
-  .layout--full-width tbody,
-  .layout--full-width tr {
-    display: table;
-    Margin-left: auto;
-    Margin-right: auto;
-    width: 320px;
-  }
-  .column,
-  .layout__gutter,
-  .footer__left,
-  .footer__right {
-    display: block;
-    Float: left;
-  }
-  .footer__inner {
-    text-align: center;
-  }
-  .footer__links {
-    Float: none;
-    Margin-left: auto;
-    Margin-right: auto;
-  }
-  .footer__right p,
-  .footer__share-button {
-    display: inline-block;
-  }
-  .layout__gutter {
-    font-size: 20px;
-    line-height: 20px;
-  }
-  .layout--no-gutter.layout--has-border:not(.layout--full-width),
-  .layout--has-gutter.layout--has-border .column__background {
-    width: 322px !important;
-  }
-  .layout--has-gutter.layout--has-border {
-    left: -1px;
-    position: relative;
-  }
-}
-@media only screen and (max-width: 320px) {
-  .border {
-    display: none;
-  }
-  .layout--no-gutter.layout--has-border:not(.layout--full-width),
-  .layout--has-gutter.layout--has-border .column__background {
-    width: 320px !important;
-  }
-  .layout--has-gutter.layout--has-border {
-    left: 0 !important;
-  }
-}
-</style>
+{% extends 'roomballot/emails/template.html' %}
 
-  <!--[if !mso]><!--><style type="text/css">
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-</style><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400" rel="stylesheet" type="text/css" /><!--<![endif]--><style type="text/css">
-body,.wrapper{background-color:#7F0056}.wrapper h1{color:#557187;font-size:26px;line-height:34px}.wrapper h2{color:#557187;font-size:20px;line-height:28px}.wrapper h3{color:#557187;font-size:16px;line-height:24px}.wrapper a{color:#069}.wrapper a:hover{color:#023 !important}@media only screen and (max-width: 620px){.wrapper h1{}.wrapper h1{font-size:22px;line-height:31px}.wrapper h2{}.wrapper h2{font-size:17px;line-height:26px}.wrapper h3{}.wrapper p{}}.column,.column__background td{color:#757575;font-size:14px;line-height:21px}.column,.column__background td{font-family:"Lato",sans-serif}.mso .column,.mso .column__background td{font-family:sans-serif !important}.border{background-color:#302}.layout--no-gutter.layout--has-border:not(.layout--full-width),.layout--has-gutter.layout--has-border .column__background,.layout--full-width.layout--has-border{border-top:1px solid
-#302;border-bottom:1px solid #302}.wrapper blockquote{border-left:4px solid #302}.divider{background-color:#302}.wrapper .btn a{color:#fff}.wrapper .btn a{font-family:"Lato",sans-serif}.mso .wrapper .btn a{font-family:sans-serif !important}.wrapper .btn a:hover{color:#fff !important}.btn--flat a,.btn--shadow a,.btn--depth a{background-color:#557187}.btn--ghost a{border:1px solid #557187}.preheader--inline,.footer__left{color:#b9b9b9}.preheader--inline,.footer__left{font-family:"Lato",sans-serif}.mso .preheader--inline,.mso .footer__left{font-family:sans-serif !important}.wrapper .preheader--inline a,.wrapper .footer__left a{color:#b9b9b9}.wrapper .preheader--inline a:hover,.wrapper .footer__left a:hover{color:#b9b9b9 !important}.header__logo{color:#c3ced9}.header__logo{font-family:Roboto,Tahoma,sans-serif}.mso .header__logo{font-family:Tahoma,sans-serif !important}.wrapper
-.header__logo a{color:#c3ced9}.wrapper .header__logo a:hover{color:#fff !important}.footer__share-button{background-color:#4d0033}.footer__share-button{font-family:"Lato",sans-serif}.mso .footer__share-button{font-family:sans-serif !important}.layout__separator--inline{font-size:20px;line-height:20px;mso-line-height-rule:exactly}
-</style><meta name="robots" content="noindex,nofollow" />
-</head>
-<!--[if mso]>
-  <body class="mso">
-<![endif]-->
-<!--[if !mso]><!-->
-  <body class="full-padding" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #7F0056;">
-<!--<![endif]-->
-    <div class="wrapper" style="background-color: #7F0056;">
-      <table style='border-collapse: collapse;table-layout: fixed;color: #b9b9b9;font-family: "Lato",sans-serif;' align="center">
-        <tbody><tr>
-          <td class="preheader__snippet" style="padding: 10px 0 5px 0;vertical-align: top;width: 300px;">
-
-          </td>
-          <td class="preheader__webversion" style="text-align: right;padding: 10px 0 5px 0;vertical-align: top;width: 300px;">
-
-          </td>
-        </tr>
-      </tbody></table>
-      <table class="header" style="border-collapse: collapse;table-layout: fixed;Margin-left: auto;Margin-right: auto;" align="center">
-        <tbody><tr>
-          <td style="padding: 0;width: 600px;">
-            <div class="header__logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 8px;Margin-bottom: 8px;color: #ffffff;font-family: Roboto,Tahoma,sans-serif;">
-              <div class="logo-center" style="font-size:0px !important;line-height:0 !important;" align="center" id="emb-email-header"><img style="height: auto;width: 100%;border: 0;max-width: 80px;padding-bottom: 20px" src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" alt="Downing JCR" width="70" height="80" /></div>
-            </div>
-          </td>
-        </tr>
-      </tbody></table>
-      <table class="layout layout--no-gutter layout--full-width" style="border-collapse: collapse;table-layout: fixed;Margin-left: auto;Margin-right: auto;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;width: 100%;background-color: #ffffff;" align="center">
-        <tbody><tr>
-          <td class="layout__edges">&nbsp;</td>
-          <td class="column" style='padding: 0;text-align: left;vertical-align: top;color: #757575;font-size: 14px;line-height: 21px;font-family: "Lato",sans-serif;width: 600px;'>
-
-            <div style="Margin-left: 0px;Margin-right: 0px;Margin-top: 24px;Margin-bottom: 24px;">
-
-<span style="color:#000000">
+{% block content %}
 Hi {{ student.first_name }},<br><br>
 
 Congrats! Your syndicate is now complete. If you need to make any changes, simply drop the Internet Officer
     a message through livechat, or an email at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
 
     Downing JCR &#10084;
-</span>
-    </div>
-
-          </td>
-          <td class="layout__edges">&nbsp;</td>
-        </tr>
-      </tbody></table>
-
-      <div style="font-size: 20px;line-height: 20px;mso-line-height-rule: exactly;">&nbsp;</div>
-
-      <table class="footer" style="border-collapse: collapse;table-layout: fixed;Margin-right: auto;Margin-left: auto;border-spacing: 0;width: 600px;" align="center">
-        <tbody><tr>
-          <td style="padding: 0 0 40px 0;">
-            <table class="footer__right" style="border-collapse: collapse;table-layout: auto;border-spacing: 0;" align="right">
-              <tbody><tr>
-                <td class="footer__inner" style="padding: 0;">
-
-
-
-
-                </td>
-              </tr>
-            </tbody></table>
-            <table class="footer__left" style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;color: #ffffff;font-family: "Lato",sans-serif;width: auto;'>
-              <tbody><tr>
-                <td class="footer__inner" style="padding: 0;font-size: 12px;line-height: 19px; padding-left: 10px; padding-right: 10px;">
-                  <div style="Margin-top: 15px;">
-                    <div>Downing College JCR<br />
-Downing College<br />
-Cambridge<br />
-CB2 1DQ</div>
-                  </div>
-                  <div class="footer__permission" style="Margin-top: 18px;">
-                    <div>This email and any attachments transmitted with it are intended for the named recipient only. If you receive this email in error please notify us immediately and then delete the email and any attachments. It is the responsibility of the recipient to check for the presence of viruses before opening any attachments.</div>
-                  </div>
-                </td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-      </tbody></table>
-      <badge>
-
-      </badge>
-    </div>
-
-</body></html>
+{% endblock %}
