Students can view other syndicates; bugfixing

--- a/rooms/roomballot/templates/roomballot/ranking.html
+++ b/rooms/roomballot/templates/roomballot/ranking.html
@@ -26,8 +26,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mt-4">
+    <div class="row mt-4 mb-4">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mb-2">
             <table class="table table-bordered table-hover table-striped">
                 <thead>
                 <tr>
@@ -48,6 +48,17 @@
                 {% endfor %}
                 </tbody>
             </table>
+        </div>
+
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <div class="d-md-block">
+            <div class="list-group">
+                <p class="list-group-item"><b>Questions?</b></p>
+                <p class="list-group-item">
+                    If you're unsure about the ballot process, please consult the Knowledge Base.
+                </p>
+                <a class="list-group-item" href="/roomballot/info">Knowledge Base</a>
+            </div>
         </div>
     </div>
 </div>
