--- a/rooms/roomballot/templates/roomballot/staircase-list.html
+++ b/rooms/roomballot/templates/roomballot/staircase-list.html
@@ -24,8 +24,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mt-4 mb-4">
+    <div class="row mt-4 mb-4">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mb-2">
             <table class="table table-bordered table-striped table-hover">
                 <thead>
                 <tr>
@@ -46,7 +46,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-4 mb-4">
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="d-md-block">
             <div class="list-group">
                 <p class="list-group-item"><b>Questions?</b></p>
