Added UIS lookup API integration to add student from command line

--- a/rooms/roomballot/templates/roomballot/student-detail.html
+++ b/rooms/roomballot/templates/roomballot/student-detail.html
@@ -52,7 +52,7 @@
                 <tr>
                     <td><b>Rank</b></td>
                     <td>
-                        {{ student.rank }}
+                        {{ student_to_view.rank }}
                     </td>
                 </tr>
                 {% if not student.has_allocated %}
