Changes to templates to fix menu not collapsing

--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -257,7 +257,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <div class="jumbotron">
-                        <h3 class="border-bottom mb-3">Tasks</h3>
+                        <h3 class="mb-3">Tasks</h3>
                         {% if student.in_ballot and not in_progress %}
                             <a href="#modal-remove-syndicate" rel="modal:open" class="btn btn-primary mb-3">Remove from Ballot</a><br>
                             {% if student.syndicate is None %}
