--- a/rooms/roomballot/templates/roomballot/rooms-list.html
+++ b/rooms/roomballot/templates/roomballot/rooms-list.html
@@ -1,80 +1,83 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Rooms | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
-          media="all"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+{% extends 'roomballot/base-admin.html' %}
+
+{% block title %}Rooms | Downing JCR RBS {% endblock %}
+
+{% block export %}<a class="btn btn-primary mt-4" href="/roomballot/admin/rooms/export">Export as CSV</a>{% endblock %}
+
+{% block content %}
+
+    <script>
+
+        window.CSRF_TOKEN = "{{ csrf_token }}";
+
+        $(document).ready(function () {
+
+            // Defining CSRF token.
+            $.ajaxSetup({
+                data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
+            });
+
+            $(".clickable-row").click(function () {
+                window.location = $(this).data("href");
+            });
+
+            $(function () {
+
+                // Generate JSON of rooms.
+                var availableRooms = [
+                    {% for r in rooms %}
+                        {
+                            value: "{{ r.room_id }}",
+                            label: "{{ r }}"
+                        }
+                        {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ];
+
+                // Set parameters of autocomplete field.
+                $('#room').autocomplete({
+                    source: availableRooms,
+                    select: function (event, ui) {
+                        location.assign('/roomballot/admin/room/' + ui.item.value);
+                    }
+                });
+
+            });
+
+        });
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
-            type="text/javascript"></script>
-</head>
-<body>
 
-<script>
-    jQuery(document).ready(function($) {
-    $(".clickable-row").click(function() {
-        window.location = $(this).data("href");
-    });
-});
-</script>
-
-<nav class="navbar navbar-dark justify-content-between mb-4">
-    <a class="navbar-brand" href="/roomballot/admin">
-        Downing JCR RBS<br>
-        <p class="small">Administration Portal</p>
-    </a>
-</nav>
-
-<div class="container-fluid">
-
-    <div class="row mb-5">
-
-        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
-            <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
-                <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
-                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item active"><span>Rooms</span></a>
-            </div>
-            <a class="btn btn-primary mt-4" href="/roomballot/admin/rooms/export">Export as CSV</a>
-        </div>
-
-        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="row">
-                {% if rooms %}
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">Staircase</th>
-                            <th scope="col">Room</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Occupant</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for r in rooms %}
-                            <tr class="clickable-row" data-href="/roomballot/admin/room/{{ r.room_id }}" style="cursor: pointer;">
-                                <td>{{ r.staircase }}</td>
-                                <td>{{ r.room_number }}</td>
-                                <td class="d-none d-sm-table-cell">{{ r.taken_by }}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+    <div class="row">
+        {% if rooms %}
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="row">
+                    <div class="col-lg-6"></div>
+                    <div class="col-lg-6">
+                        <div class="ui-widget mb-3" id="student-search-widget">
+                            <input id="room" style="width:100%;" placeholder="Search Rooms"><br>
+                        </div>
+                    </div>
                 </div>
-                {% endif %}
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Staircase</th>
+                        <th scope="col">Room</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Occupant</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for r in rooms %}
+                        <tr class="clickable-row" data-href="/roomballot/admin/room/{{ r.room_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ r.staircase }}</td>
+                            <td>{{ r.room_number }}</td>
+                            <td class="d-none d-sm-table-cell">{{ r.taken_by }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </main>
+        {% endif %}
     </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
