--- a/rooms/roomballot/templates/roomballot/status.html
+++ b/rooms/roomballot/templates/roomballot/status.html
@@ -1,182 +1,145 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Status | Downing JCR RBS</title>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
-          media="all"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
-            type="text/javascript"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
-          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-</head>
-<body>
+{% extends 'roomballot/base-admin.html' %}
 
-<script>
-    jQuery(document).ready(function ($) {
-        $(".clickable-row").click(function () {
-            window.location = $(this).data("href");
+{% block title %}Status | Downing JCR RBS{% endblock %}
+
+{% block content %}
+
+    <script>
+        jQuery(document).ready(function ($) {
+            $(".clickable-row").click(function () {
+                window.location = $(this).data("href");
+            });
         });
-    });
-</script>
+    </script>
+    <div class="row">
 
-<nav class="navbar navbar-dark justify-content-between mb-4">
-    <a class="navbar-brand" href="/roomballot/admin">
-        Downing JCR RBS<br>
-        <p class="small">Administration Portal</p>
-    </a>
-</nav>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-1">
+            <div class="mb-3">
+                <table>
+                    <tr>
+                        {% if syndicates_complete %}
+                            <td style="min-width: 25px"><i class="fas fa-check"></i></td>
+                            <td>First Year Syndicates Complete</td>
+                        {% else %}
+                            <td style="min-width: 25px"><i class="fas fa-times"></i></td>
+                            <td>First Year Syndicates Incomplete</td>
+                        {% endif %}
+                    </tr>
+                    <tr>
+                        {% if randomised %}
+                            <td><i class="fas fa-check"></i></td>
+                            <td>Randomised</td>
+                        {% else %}
+                            <td><i class="fas fa-times"></i></td>
+                            <td>Not Randomised</td>
+                        {% endif %}
 
-<div class="container-fluid">
-
-    <div class="row mb-5">
-
-        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
-            <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
-                <a href="/roomballot/admin/status" class="list-group-item active"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
-                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
+                    </tr>
+                    <tr>
+                        {% if in_progress %}
+                            <td><i class="fas fa-check"></i></td>
+                            <td>Ballot In Progress</td>
+                        {% else %}
+                            <td><i class="fas fa-times"></i></td>
+                            <td>Ballot Not In Progress</td>
+                        {% endif %}
+                    </tr>
+                    {% if in_progress %}
+                        <tr>
+                            <td></td>
+                            <td>Currently Picking: {{ current_student }}</td>
+                        </tr>
+                    {% endif %}
+                </table>
             </div>
         </div>
 
-        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="row">
-
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-1">
-                    <div class="mb-3">
-                        <table>
-                            <tr>
-                                {% if syndicates_complete %}
-                                    <td style="min-width: 25px"><i class="fas fa-check"></i></td>
-                                    <td>First Year Syndicates Complete</td>
-                                {% else %}
-                                    <td style="min-width: 25px"><i class="fas fa-times"></i></td>
-                                    <td>First Year Syndicates Incomplete</td>
-                                {% endif %}
-                            </tr>
-                            <tr>
-                                {% if randomised %}
-                                    <td><i class="fas fa-check"></i></td>
-                                    <td>Randomised</td>
-                                {% else %}
-                                    <td><i class="fas fa-times"></i></td>
-                                    <td>Not Randomised</td>
-                                {% endif %}
-
-                            </tr>
-                            <tr>
-                                {% if in_progress %}
-                                    <td><i class="fas fa-check"></i></td>
-                                    <td>Ballot In Progress</td>
-                                {% else %}
-                                    <td><i class="fas fa-times"></i></td>
-                                    <td>Ballot Not In Progress</td>
-                                {% endif %}
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
-                {% if incomplete_students %}
-                    <div class="col-md-12">
-                        <hr size="5px" color="" noshade/>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-                        <h3>Incomplete Students</h3>
-                        <p>The following students have not completed the syndicate creation process.</p>
-                        <table class="table table-bordered table-hover">
-                            <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
-                                <th scope="col">Issue</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for student in incomplete_students %}
-                                <tr class="alert-danger clickable-row" data-href="manage-student/{{ student.user_id }}"
-                                    style="cursor: pointer;">
-                                    <td>{{ student.first_name }} {{ student.surname }}</td>
-                                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
-                                    <td>{% if student.syndicate == None %}Not part of a syndicate
-                                    {% elif not student.accepted_syndicate %}Not accepted syndicate
-                                    {% elif not student.syndicate.complete %}Syndicate Incomplete
-                                    {% endif %}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                {% endif %}
-
-                {% if students_outside_ballot %}
-                    <div class="col-md-12">
-                        <hr size="5px" color="" noshade/>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-                        <h3>Outside Ballot</h3>
-                        <p>The following students have been removed from the ballot.</p>
-                        <table class="table table-bordered table-hover table-striped">
-                            <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
-                                <th scope="col">Room Allocated?</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for student in students_outside_ballot %}
-                                <tr class="clickable-row" data-href="manage-student/{{ student.user_id }}"
-                                    style="cursor: pointer;">
-                                    <td>{{ student.first_name }} {{ student.surname }}</td>
-                                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
-                                    <td>{% if student.has_allocated %}Yes{% else %}No{% endif %}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                {% endif %}
-
-                {% if incomplete_syndicates %}
-                    <div class="col-md-12">
-                        <hr size="5px" color="" noshade/>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-                        <h3>Incomplete Syndicates</h3>
-                        <p>The following syndicates are currently incomplete.</p>
-                        <table class="table table-bordered table-hover table-striped">
-                            <thead>
-                            <tr>
-                                <th scope="col">Syndicate ID</th>
-                                <th scope="col">Owner</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for syndicate in incomplete_syndicates %}
-                                <tr class="clickable-row" data-href="syndicate/{{ syndicate.syndicate_id }}"
-                                    style="cursor: pointer;">
-                                    <td>{{ syndicate.syndicate_id }}</td>
-                                    <td>{{ syndicate.owner_id }}</td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                {% endif %}
+        {% if incomplete_students %}
+            <div class="col-md-12">
+                <hr size="5px" color="" noshade/>
             </div>
-        </main>
-    </div>
-</div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                <h3>Incomplete Students</h3>
+                <p>The following students have not completed the syndicate creation process.</p>
+                <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
+                        <th scope="col">Issue</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for student in incomplete_students %}
+                        <tr class="alert-danger clickable-row" data-href="manage-student/{{ student.user_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ student.first_name }} {{ student.surname }}</td>
+                            <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
+                            <td>{% if student.syndicate == None %}Not part of a syndicate
+                            {% elif not student.accepted_syndicate %}Not accepted syndicate
+                            {% elif not student.syndicate.complete %}Syndicate Incomplete
+                            {% endif %}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
 
-</body>
-</html>
+        {% if students_outside_ballot %}
+            <div class="col-md-12">
+                <hr size="5px" color="" noshade/>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                <h3>Outside Ballot</h3>
+                <p>The following students have been removed from the ballot.</p>
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
+                        <th scope="col">Room Allocated?</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for student in students_outside_ballot %}
+                        <tr class="clickable-row" data-href="manage-student/{{ student.user_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ student.first_name }} {{ student.surname }}</td>
+                            <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
+                            <td>{% if student.has_allocated %}Yes{% else %}No{% endif %}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
+
+        {% if incomplete_syndicates %}
+            <div class="col-md-12">
+                <hr size="5px" color="" noshade/>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                <h3>Incomplete Syndicates</h3>
+                <p>The following syndicates are currently incomplete.</p>
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Syndicate ID</th>
+                        <th scope="col">Owner</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for syndicate in incomplete_syndicates %}
+                        <tr class="clickable-row" data-href="syndicate/{{ syndicate.syndicate_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ syndicate.syndicate_id }}</td>
+                            <td>{{ syndicate.owner_id }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
+    </div>
+{% endblock %}
