--- a/rooms/roomballot/templates/roomballot/student-list.html
+++ b/rooms/roomballot/templates/roomballot/student-list.html
@@ -1,81 +1,101 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Students | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
-          media="all"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+{% extends 'roomballot/base-admin.html' %}
+
+{% block title %}Students | Downing JCR RBS{% endblock %}
+
+{% block export %}
+    <a class="btn btn-primary mt-4" href="/roomballot/admin/students/export">Export as CSV</a>{% endblock %}
+
+{% block content %}
+
+    <script>
+
+        window.CSRF_TOKEN = "{{ csrf_token }}";
+
+        $(document).ready(function () {
+
+            // Defining CSRF token.
+            $.ajaxSetup({
+                data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
+            });
+
+            // Handle response received after POST request.
+            function HandleResponse(responseCode) {
+                // Successfully created syndicate.
+                if (responseCode === 1) location.reload(true);
+                else location.assign('/roomballot/error/' + responseCode.toString());
+            }
+
+            $(".clickable-row").click(function () {
+                window.location = $(this).data("href");
+            });
+
+            $(function () {
+
+                // Generate JSON of students.
+                var availableStudents = [
+                    {% for s in students %}
+                        {
+                            value: "{{ s.user_id }}",
+                            label: "{{ s|escapejs }} ({{ s.user_id }})"
+                        }
+                        {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ];
+
+                // Set parameters of autocomplete field.
+                $('#student').autocomplete({
+                    source: availableStudents,
+                    select: function (event, ui) {
+                        location.assign('/roomballot/admin/manage-student/' + ui.item.value);
+                    }
+                });
+
+            });
+
+        });
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
-            type="text/javascript"></script>
-</head>
-<body>
 
-<script>
-    jQuery(document).ready(function($) {
-    $(".clickable-row").click(function() {
-        window.location = $(this).data("href");
-    });
-});
-</script>
-
-<nav class="navbar navbar-dark justify-content-between mb-4">
-    <a class="navbar-brand" href="/roomballot/admin">
-        Downing JCR RBS<br>
-        <p class="small">Administration Portal</p>
-    </a>
-</nav>
-
-<div class="container-fluid">
-
-    <div class="row mb-5">
-
-        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
-            <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
-                <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
-                <a href="/roomballot/admin/students" class="list-group-item active"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
-            </div>
-            <a class="btn btn-primary mt-4" href="/roomballot/admin/students/export">Export as CSV</a>
-        </div>
-
-        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="row">
-                {% if students %}
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">CRSid</th>
-                            <th scope="col">Name</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Year</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for s in students %}
-                            <tr class="clickable-row" data-href="/roomballot/admin/manage-student/{{ s.user_id }}" style="cursor: pointer;">
-                                <td>{{ s.user_id }}</td>
-                                <td>{{ s.first_name }} {{ s.surname }}</td>
-                                <td class="d-none d-sm-table-cell">{% if s.year == 1 %}First{% else %}
-                                    Second{% endif %}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+    <div class="row">
+        {% if students %}
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="row">
+                    <div class="col-lg-6"></div>
+                    <div class="col-lg-6">
+                        <div class="ui-widget mb-3" id="student-search-widget">
+                            <input id="student" style="width:100%;" placeholder="Search Students"><br>
+                        </div>
+                    </div>
                 </div>
-                {% endif %}
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">CRSid</th>
+                        <th scope="col">Name</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Year</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Picked?</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for s in students %}
+                        <tr class="clickable-row" data-href="/roomballot/admin/manage-student/{{ s.user_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ s.user_id }}</td>
+                            <td>{{ s.first_name }} {{ s.surname }}</td>
+                            <td class="d-none d-sm-table-cell">{% if s.year == 1 %}First{% else %}
+                                Second{% endif %}</td>
+                            <td class="d-none d-sm-table-cell">
+                                {% if s.has_allocated %}
+                                    <i class="fas fa-check" style="color: #228B22"></i>
+                                {% else %}
+                                    <i class="fas fa-times" style="color: #8B0000"></i>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </main>
+        {% endif %}
     </div>
-</div>
 
-</body>
-</html>
+{% endblock %}
