--- a/rooms/roomballot/templates/roomballot/syndicate-list.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-list.html
@@ -1,83 +1,45 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Syndicates | Downing JCR RBS</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
-          media="all"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+{% extends 'roomballot/base-admin.html' %}
+
+{% block title %}Syndicates | Downing JCR RBS{% endblock %}
+
+{% block content %}
+
+    <script>
+        jQuery(document).ready(function ($) {
+            $(".clickable-row").click(function () {
+                window.location = $(this).data("href");
+            });
+        });
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
-            type="text/javascript"></script>
-</head>
-<body>
 
-<nav class="navbar navbar-dark justify-content-between mb-4">
-    <a class="navbar-brand" href="/roomballot/admin">
-        Downing JCR RBS<br>
-        <p class="small">Administration Portal</p>
-    </a>
-</nav>
+    <div class="row">
 
-<script>
-    jQuery(document).ready(function($) {
-    $(".clickable-row").click(function() {
-        window.location = $(this).data("href");
-    });
-});
-</script>
-
-<div class="container-fluid">
-
-    <div class="row mb-5">
-
-        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
-            <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
-                <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item active"><span>Syndicates</span></a>
-                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
-            </div>
-        </div>
-
-        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="row">
-
-                {% if syndicates %}
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
-                        <tr>
-                            <th scope="col">Syndicate ID</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Owner</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Year</th>
-                            <th scope="col">Complete?</th>
+        {% if syndicates %}
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Syndicate ID</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Owner</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Year</th>
+                        <th scope="col">Complete?</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for syndicate in syndicates %}
+                        <tr class="clickable-row" data-href="syndicate/{{ syndicate.syndicate_id }}"
+                            style="cursor: pointer;">
+                            <td>{{ syndicate.syndicate_id }}</td>
+                            <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
+                            <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}
+                                Second{% endif %}</td>
+                            <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
                         </tr>
-                        </thead>
-                        <tbody>
-                        {% for syndicate in syndicates %}
-                            <tr class="clickable-row" data-href="syndicate/{{ syndicate.syndicate_id }}" style="cursor: pointer;">
-                                <td>{{ syndicate.syndicate_id }}</td>
-                                <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
-                                <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}
-                                    Second{% endif %}</td>
-                                <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                {% endif %}
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </main>
+        {% endif %}
     </div>
-</div>
 
-</body>
-</html>
+{% endblock %}
