--- a/rooms/roomballot/templates/roomballot/syndicate-manage.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-manage.html
@@ -1,169 +1,129 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Syndicate #{{ syndicate.syndicate_id }} | Downing JCR RBS</title>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
-          media="all"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
-            type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
-</head>
-<body>
+{% extends 'roomballot/base-admin.html' %}
 
-<script>
-    window.CSRF_TOKEN = "{{ csrf_token }}";
+{% block title %}Syndicate #{{ syndicate.syndicate_id }} | Downing JCR RBS{% endblock %}
 
-    $(document).ready(function () {
+{% block content %}
 
-        // Defining CSRF token.
-        $.ajaxSetup({
-            data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
-        });
+    <script>
+        window.CSRF_TOKEN = "{{ csrf_token }}";
 
-        // Handle response received after POST request.
-        function HandleResponse(responseCode) {
-            // Successfully created syndicate.
-            if (responseCode === 1) location.replace("/roomballot/admin/syndicates");
-            else location.assign('/roomballot/error/' + responseCode.toString());
-        }
+        $(document).ready(function () {
 
-        // Called when the user clicks a button.
-        function CreateButtonAjaxResponse(code) {
-            $.ajax({
-                url: '/roomballot/admin/syndicate/{{ syndicate.syndicate_id }}',
-                type: 'POST',
-                data: {'response': code},
-                dataType: 'json',
-                csrfmiddlewaretoken: '{{ csrf_token }}',
-                success: function (response) {
-                    HandleResponse(response.responseCode);
-                }
+            // Defining CSRF token.
+            $.ajaxSetup({
+                data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
             });
-        }
 
-        $(function () {
+            // Handle response received after POST request.
+            function HandleResponse(responseCode) {
+                // Successfully created syndicate.
+                if (responseCode === 1) location.replace("/roomballot/admin/syndicates");
+                else location.assign('/roomballot/error/' + responseCode.toString());
+            }
 
-            // Generate JSON of rooms which can be allocated.
-            var availableRooms = [
-                {% for r in rooms %}
-                    {
-                        value: "{{ r.room_id }}",
-                        label: "{{ r }}"
+            // Called when the user clicks a button.
+            function CreateButtonAjaxResponse(code) {
+                $.ajax({
+                    url: '/roomballot/admin/syndicate/{{ syndicate.syndicate_id }}',
+                    type: 'POST',
+                    data: {'response': code},
+                    dataType: 'json',
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                    success: function (response) {
+                        HandleResponse(response.responseCode);
                     }
-                    {% if not forloop.last %},{% endif %}
-                {% endfor %}
-            ];
+                });
+            }
 
-            // When 'remove from syndicate' is clicked, send response.
-            $('#dissolve-syndicate').click(function () {
-                CreateButtonAjaxResponse(1);
+            $(function () {
+
+                // Generate JSON of rooms which can be allocated.
+                var availableRooms = [
+                    {% for r in rooms %}
+                        {
+                            value: "{{ r.room_id }}",
+                            label: "{{ r }}"
+                        }
+                        {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ];
+
+                // When 'remove from syndicate' is clicked, send response.
+                $('#dissolve-syndicate').click(function () {
+                    CreateButtonAjaxResponse(1);
+                });
+
             });
 
         });
+    </script>
 
-    });
-</script>
+    <div id="modal-dissolve" class="modal" role="dialog">
+        <p>Are you sure you want to dissolve this syndicate?</p>
+        <a href="#" rel="modal:close" class="btn btn-primary">Cancel</a>
+        <button class="btn btn-primary ml-2" id="dissolve-syndicate">Confirm</button>
+    </div>
 
-<nav class="navbar navbar-dark justify-content-between mb-4">
-    <a class="navbar-brand" href="/roomballot/admin">
-        Downing JCR RBS<br>
-        <p class="small">Administration Portal</p>
-    </a>
-</nav>
+    <div class="row">
 
-<div id="modal-dissolve" class="modal" role="dialog">
-    <p>Are you sure you want to dissolve this syndicate?</p>
-    <a href="#" rel="modal:close" class="btn btn-primary">Cancel</a>
-    <button class="btn btn-primary ml-2" id="dissolve-syndicate">Confirm</button>
-</div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb-2">
+            <h2>Syndicate #{{ syndicate.syndicate_id }}</h2>
+        </div>
 
-<div class="container-fluid">
+    </div>
+    <div class="row">
 
-    <div class="row mt-4">
-        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
-            <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
-                <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
-                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+            <table class="table table-bordered table-striped">
+                <thead style="display:none">
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><b>Syndicate Owner</b></td>
+                    <td>{{ syndicate.owner_id }}</td>
+                </tr>
+                <tr>
+                    <td><b>Syndicate Complete?</b></td>
+                    <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
+                </tr>
+                </tbody>
+            </table>
+
+            <hr size="5px" color="" noshade/>
+
+
+            <table class="table table-bordered table-striped">
+                <thead style="display:none">
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for student in students %}
+                    <tr>
+                        <td><b>{{ student.first_name }} {{ student.surname }}</b></td>
+                        <td>{{ student.user_id }}</td>
+                        <td>{% if student.accepted_syndicate %}Accepted{% else %}Not Accepted{% endif %}</td>
+                        <td><a class="btn btn-primary" href="../manage-student/{{ student.user_id }}">Manage</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+
+            </table>
+        </div>
+
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+            <div class="jumbotron">
+                <h3 class="mb-3">Tasks</h3>
+                {% if not in_progress %}
+                    <a class="btn btn-primary" href="#modal-dissolve" rel="modal:open">Dissolve Syndicate</a>
+                {% endif %}
             </div>
         </div>
-        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="row">
-
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb-2">
-                    <h2>Syndicate #{{ syndicate.syndicate_id }}</h2>
-                </div>
-
-            </div>
-            <div class="row">
-
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <table class="table table-bordered table-striped">
-                        <thead style="display:none">
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td><b>Syndicate Owner</b></td>
-                            <td>{{ syndicate.owner_id }}</td>
-                        </tr>
-                        <tr>
-                            <td><b>Syndicate Complete?</b></td>
-                            <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-
-                    <hr size="5px" color="" noshade/>
-
-
-                    <table class="table table-bordered table-striped">
-                        <thead style="display:none">
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for student in students %}
-                            <tr>
-                                <td><b>{{ student.first_name }} {{ student.surname }}</b></td>
-                                <td>{{ student.user_id }}</td>
-                                <td>{% if student.accepted_syndicate %}Accepted{% else %}Not Accepted{% endif %}</td>
-                                <td><a class="btn btn-primary" href="../manage-student/{{ student.user_id }}">Manage</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-
-                    </table>
-                </div>
-
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <div class="jumbotron">
-                        <h3 class="mb-3">Tasks</h3>
-                        {% if not in_progress %}
-                        <a class="btn btn-primary" href="#modal-dissolve" rel="modal:open">Dissolve Syndicate</a>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        </main>
     </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
