--- a/rooms/roomballot/templates/roomballot/student-list.html
+++ b/rooms/roomballot/templates/roomballot/student-list.html
@@ -72,7 +72,7 @@
                         <th scope="col">CRSid</th>
                         <th scope="col">Name</th>
                         <th scope="col" class="d-none d-sm-table-cell">Year</th>
-                        <th scope="col" class="d-none d-sm-table-cell">Picked?</th>
+                        <th scope="col" class="d-none d-sm-table-cell">Allocated?</th>
                     </tr>
                     </thead>
                     <tbody>
